--- a/RunTrackerWizardV11/app/src/main/res/layout/recycler_item_round.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/recycler_item_round.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -16,7 +17,7 @@
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textRound"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -57,3 +58,4 @@
 
 
 </androidx.cardview.widget.CardView>
+</layout>
