--- a/RunTrackerWizardV11/app/src/main/res/layout/activity_run.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/activity_run.xml
@@ -1,75 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".RunActivity">
+        android:layout_height="match_parent">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainerView"
             android:name="com.example.runtrackerwizardv11.NavigationFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout="@layout/fragment_navigation" />
 
-        <ScrollView
-            android:id="@+id/holderRecycler"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="12dp"
+            android:orientation="vertical"
             android:padding="12dp"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@id/holderStart"
-            app:layout_constraintEnd_toEndOf="@id/holderStart"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
-            app:layout_constraintVertical_weight="1"
-            tools:layout_constraintTop_toBottomOf="@id/fragmentContainerView">
+            app:layout_constraintBottom_toTopOf="@+id/holderStart"
+            app:layout_constraintTop_toBottomOf="@id/fragmentContainerView">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text="Intermediate" />
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Intermediate" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="48dp"
+                android:text="Pyramid Run"
+                android:textSize="24sp" />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="32dp"
-                    android:text="Pyramid Run"
-                    android:textAlignment="center"
-                    android:textSize="24sp" />
+            <TextView
+                android:id="@+id/textRoundNo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Round"
+                android:textAlignment="center" />
 
-                <TextView
-                    android:id="@+id/textRunOrRest"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="8dp"
-                    android:text="Run"
-                    android:textAlignment="center"
-                    android:textSize="48sp" />
+            <TextView
+                android:id="@+id/textRunOrRest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="Run"
+                android:textAlignment="center"
+                android:textSize="48sp" />
 
-                <TextView
-                    android:id="@+id/textCount"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="8dp"
-                    android:text="00"
-                    android:textAlignment="center"
-                    android:textSize="96sp" />
+            <TextView
+                android:id="@+id/textCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="00"
+                android:textAlignment="center"
+                android:textSize="96sp" />
 
-            </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/holderStart"
@@ -81,15 +79,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/holderRecycler"
-            tools:layout_constraintTop_toBottomOf="@id/holderRecycler">
+            app:layout_constraintTop_toBottomOf="@id/linearLayout">
 
             <Button
                 android:id="@+id/btnPause"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="32sp"
-                android:minHeight="120dp"
+                android:layout_height="120dp"
                 android:text="Pause" />
 
             <LinearLayout
