Apply distance tracker

--- a/RunTrackerWizardV11/app/src/main/res/layout/activity_run.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/activity_run.xml
@@ -12,6 +12,7 @@
             android:name="com.example.runtrackerwizardv11.NavigationFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="goToDistanceTracker"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
