--- a/RunTrackerWizardV11/app/src/main/res/layout/activity_main.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:name="com.example.runtrackerwizardv11.NavigationFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="goToDistanceTracker"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
