--- a/RunTrackerWizardV11/app/src/main/res/layout/fragment_navigation.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/fragment_navigation.xml
@@ -28,12 +28,14 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnHeaderNext"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_weight="0"
             android:minWidth="60dp"
-            android:text=">" />
+            android:onClick="goToDistanceTracker"
+            android:text=">"
+            />
     </LinearLayout>
 
 </LinearLayout>
