--- a/RunTrackerWizardV11/app/src/main/res/layout/activity_run.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/activity_run.xml
@@ -94,17 +94,8 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnBack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="12dp"
-                    android:layout_weight="1"
-                    android:minHeight="60dp"
-                    android:text="Back" />
-
-                <Button
                     android:id="@+id/btnNext"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:minHeight="60dp"
                     android:text="Next"
