--- a/RunTrackerWizardV11/app/src/main/res/layout/activity_done.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/activity_done.xml
@@ -50,6 +50,14 @@
                 android:textAlignment="center"
                 android:textSize="48sp" />
 
+            <Button
+                android:id="@+id/btnHome"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginTop="64dp"
+                android:text="Home"
+                app:layout_constraintTop_toBottomOf="@+id/textRunOrRest" />
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
