--- a/RunTrackerWizardV11/app/src/main/res/layout/activity_program_detail.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/activity_program_detail.xml
@@ -36,6 +36,17 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/txtLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/txtDistance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="_" />
+
+            <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
