--- a/RunTrackerWizardV11/app/src/main/res/layout/activity_done.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/activity_done.xml
@@ -55,6 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_marginTop="64dp"
+                android:onClick="goToStart"
                 android:text="Home"
                 app:layout_constraintTop_toBottomOf="@+id/textRunOrRest" />
 
