--- a/RunTrackerWizardV11/app/src/main/res/layout/activity_program_detail.xml
+++ b/RunTrackerWizardV11/app/src/main/res/layout/activity_program_detail.xml
@@ -36,17 +36,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txtLocation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/txtDistance"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="_" />
-
-            <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
-                android:text="Pyramid Run"
+                android:text="Your Run"
                 android:textAlignment="center"
                 android:textSize="48sp" />
 
